# gauge

./: README.md  gauge.html
back-end/: Cargo.toml
back-end/src/: device.rs  main.rs
back-end/static/: index.html
front-end/: Cargo.toml  index.html
front-end/src/: device.rs  gauge.rs  main.rs
